# vernierScans

./: .gitignore  FileManagement.h  MakeBpmDisplacements.C  README.md  run_analysis.pl
condor/: condor_jobs.txt  condor_submit.csh  make_analysis_list.pl  make_jobs_from_list.pl
processing/: make_all.pl
processing/data_event_prdf_analysis/: fullClean.csh
processing/dst_analysis/: fullClean.csh
processing/hourglass_correction/: fullClean.csh
processing/luminosity/: README.md  fullClean.sh
processing/multiple_collisions_correction/: make_cross_section.py
processing/scaler_event_prdf_analysis/: fullClean.csh
processing/wall_current_monitor_distribution/: MakeWcmDistribution.C  Makefile  bwcm_zprofile_359711_density.txt  bwcm_zprofile_360879_density.txt  bwcm_zprofile_362492_density.txt  bwcm_zprofile_364636_density.txt  bwcm_zprofile_365866_density.txt  bwcm_zprofile_366605_density.txt  bwcm_zprofile_367138_density.txt  fit_blue_yellow.C  fitted_distributions.root  out.root  wcm.list  wcm_dists.root  ywcm_zprofile_359711_density.txt  ywcm_zprofile_360879_density.txt  ywcm_zprofile_362492_density.txt  ywcm_zprofile_364636_density.txt  ywcm_zprofile_365866_density.txt  ywcm_zprofile_366605_density.txt  ywcm_zprofile_367138_density.txt  zprofile_fit_run_359711.root  zprofile_fit_run_360879.root  zprofile_fit_run_362492.root
processing/zvertex_cross_check/: check_tree.C  out.root
reduce_data/basic_event_time_stamp/: README.md  (+1 more)
reduce_data/dst_reduction/src/: Makefile.am  VernierDSTReduction.cc  VernierDSTReduction.h  VernierDSTReductionLinkDef.h  configure.in
(+1115 files in other folders)
